--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,6 @@
+@import url(http://fonts.googleapis.com/css?family=Capriola);
 body {
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: Capriola, Helvetica, sans-serif; }
 
 .wrapper {
   width: 60%;
@@ -12,30 +13,33 @@ body {
   margin: 0 0 3em 0;
   padding: 0;
   list-style: none;
-  background-color: #f2f2f2;
-  border: 1px solid #ccc;
-  border-radius: 4px 4px 0 0; }
+  background-color: #474C51;
+  border-bottom: 5px solid #069;
+  border-radius: 6px 6px 0 0; }
   .nav a {
-    float: right;
+    float: left;
     display: block;
     padding: 8px 15px;
     text-decoration: none;
     font-weight: bold;
-    color: #069;
-    border-left: 1px solid #ccc; }
+    color: #fff; }
   .nav a:hover {
-    color: #c00;
-    background-color: #fff; }
+    border-radius: 6px 6px 0 0;
+    background-color: #069; }
 
 .header {
   font-size: 25px;
   font-weight: bold;
   margin: 20px 0;
-  color: #069; }
+  color: #069;
+  text-align: right; }
+
+.active {
+  background-color: #069; }
 
 /* ========= HOME-CHARTS ========= */
 .container {
-  background-color: white;
+  background-color: #fff;
   top: 0;
   left: 0;
   width: 100%;
@@ -44,28 +48,27 @@ body {
 .charts-view {
   width: 80%;
   margin: 0 auto; }
-
-.charts-demo ul li {
-  list-style-type: none;
-  width: 50%;
-  height: 340px;
-  float: left;
-  display: block;
-  margin: 0 auto;
-  text-align: center; }
-  .charts-demo ul li h2 {
+  .charts-view ul li {
+    list-style-type: none;
+    width: 50%;
+    height: 340px;
+    float: left;
+    display: block;
+    margin: 0 auto;
+    text-align: center; }
+  .charts-view h2 {
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 20px; }
-  .charts-demo ul li h3 {
+  .charts-view h3 {
     text-align: center;
     font-weight: bold; }
-  .charts-demo ul li img {
+  .charts-view img {
     -webkit-transition: width, height;
     -moz-transition: width, height;
     -ms-transition: width, height;
     transition: width, height; }
-  .charts-demo ul li img:hover {
+  .charts-view img:hover {
     width: 420px;
     height: 260px; }
 
@@ -86,14 +89,49 @@ body {
 /* ========= COSMETIC STYLES ========= */
 .button-main,
 .button-zoom {
-  height: 30px;
-  border-radius: 4px; }
+  -moz-box-shadow: inset 0px 0px 14px -3px #9fb4f2;
+  -webkit-box-shadow: inset 0px 0px 14px -3px #9fb4f2;
+  box-shadow: inset 0px 0px 14px -3px #9fb4f2;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
+  background: -moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+  background: -webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+  background: -o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+  background: -ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+  background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7892c2', endColorstr='#476e9e',GradientType=0);
+  background-color: #7892c2;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #4e6096;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: arial;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #283966; }
 
-.button-zoom {
-  width: 30px;
-  margin: 0 auto; }
+.button-main:hover,
+.button-zoom:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
+  background: -moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+  background: -webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+  background: -o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+  background: -ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+  background: linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
+  background-color: #476e9e; }
+
+.button-main:active,
+.button-zoom:active {
+  position: relative;
+  top: 1px; }
 
 .plus-minus {
+  text-align: center;
   font-weight: bold;
   font-size: 20px;
   margin: 0 auto; }
@@ -122,14 +160,17 @@ input {
   clear: both; }
 
 /* ========= @media ========= */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
   .wrapper {
     width: 100%; }
 
-  ul li {
+  .charts-view ul li {
     width: 100%; }
 
   .charts-view {
     width: 100%; } }
+@media screen and (max-width: 1700px) {
+  .wrapper {
+    width: 90%; } }
 
 /*# sourceMappingURL=main.css.map */
