--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,7 +14,7 @@ body {
   padding: 0;
   list-style: none;
   background-color: #474C51;
-  border-bottom: 5px solid #069;
+  border-bottom: 5px solid #599bb3;
   border-radius: 6px 6px 0 0; }
   .nav a {
     float: left;
@@ -25,17 +25,14 @@ body {
     color: #fff; }
   .nav a:hover {
     border-radius: 6px 6px 0 0;
-    background-color: #069; }
+    background-color: #599bb3; }
 
 .header {
   font-size: 25px;
   font-weight: bold;
   margin: 20px 0;
-  color: #069;
+  color: #599bb3;
   text-align: right; }
-
-.active {
-  background-color: #069; }
 
 /* ========= HOME-CHARTS ========= */
 .container {
@@ -83,47 +80,32 @@ body {
 .about {
   font-size: 20px;
   color: #003366;
-  line-height: 120%;
+  line-height: 140%;
   margin-bottom: 40px; }
+  .about ol {
+    list-style-type: decimal;
+    padding-left: 50px; }
 
 /* ========= COSMETIC STYLES ========= */
 .button-main,
 .button-zoom {
-  -moz-box-shadow: inset 0px 0px 14px -3px #9fb4f2;
-  -webkit-box-shadow: inset 0px 0px 14px -3px #9fb4f2;
-  box-shadow: inset 0px 0px 14px -3px #9fb4f2;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
-  background: -moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background: -webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background: -o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background: -ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7892c2', endColorstr='#476e9e',GradientType=0);
-  background-color: #7892c2;
+  background-color: #599bb3;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: 1px solid #4e6096;
+  border: 1px solid #29668f;
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
   font-family: arial;
   font-size: 14px;
-  font-weight: bold;
-  padding: 6px 24px;
+  padding: 6px 30px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #283966; }
+  text-shadow: 0px 1px 0px #3d768a; }
 
 .button-main:hover,
 .button-zoom:hover {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
-  background: -moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background: -webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background: -o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background: -ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background: linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
-  background-color: #476e9e; }
+  background-color: #408c99; }
 
 .button-main:active,
 .button-zoom:active {
