--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,6 @@
 // Main css file
 
 @import url(http://fonts.googleapis.com/css?family=Capriola);
-$home-color: #ccc; // primary color used on Home page
 
 body {
   font-family: Capriola, Helvetica, sans-serif;
@@ -21,8 +20,7 @@ body {
   padding: 0;
   list-style: none;
   background-color: #474C51;
-  //border: 1px solid $home-color; 
-  border-bottom: 5px solid #069;
+  border-bottom: 5px solid #599bb3;
   border-radius: 6px 6px 0 0; 
 
   a {
@@ -32,13 +30,11 @@ body {
     text-decoration: none;
     font-weight: bold;
     color: #fff;
-    //border-right: 1px solid $home-color; 
   }
 
   a:hover {
-    //color: #c00;
     border-radius: 6px 6px 0 0;
-    background-color: #069; 
+    background-color: #599bb3; 
   }
 }
 
@@ -46,12 +42,8 @@ body {
   font-size: 25px;
   font-weight: bold;
   margin: 20px 0; 
-  color: #069;
+  color: #599bb3;
   text-align: right;
-}
-
-.active{
-  background-color: #069;
 }
 
 /* ========= HOME-CHARTS ========= */
@@ -106,7 +98,7 @@ body {
 
 .footer {
   color: #777;
-  border-top: 1px solid $home-color;
+  border-top: 1px solid #ccc;
 
   p {
     margin-top: 10px;
@@ -118,56 +110,43 @@ body {
 .about {
   font-size: 20px;
   color: #003366;
-  line-height: 120%;
+  line-height: 140%;
   margin-bottom: 40px;
+
+  ol {
+    list-style-type: decimal;
+    padding-left: 50px;
+  }
 }
 
 /* ========= COSMETIC STYLES ========= */
 
 .button-main,
 .button-zoom {
-  -moz-box-shadow:inset 0px 0px 14px -3px #9fb4f2;
-  -webkit-box-shadow:inset 0px 0px 14px -3px #9fb4f2;
-  box-shadow:inset 0px 0px 14px -3px #9fb4f2;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
-  background:-moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background:-webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background:-o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background:-ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
-  background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7892c2', endColorstr='#476e9e',GradientType=0);
-  background-color:#7892c2;
-  -moz-border-radius:4px;
-  -webkit-border-radius:4px;
-  border-radius:4px;
-  border:1px solid #4e6096;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:arial;
-  font-size:14px;
-  font-weight:bold;
-  padding:6px 24px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #283966;
+  background-color: #599bb3;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #29668f;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: arial;
+  font-size: 14px;
+  padding: 6px 30px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #3d768a;
 }
 
 .button-main:hover,
 .button-zoom:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
-  background:-moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background:-webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background:-o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background:-ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
-  background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
-  background-color:#476e9e;
+  background-color: #408c99;
 }
 
 .button-main:active,
 .button-zoom:active {
-  position:relative;
-  top:1px;
+  position: relative;
+  top: 1px;
 }
 
 .plus-minus {
